# task-manager

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/task_manager/: __init__.py  manager.py  utils.py
tests/: test_manager.py  test_utils.py
